syntax = "proto3";

import "crypto/pb/signature.proto";
import "core/contract/contract.proto";
package txpb;
option go_package = "github.com/iost-official/go-iost/v3/core/tx/pb;txpb";

message Action {
    string contract = 1;
    string actionName = 2;
    string data = 3;
}

message Tx {
    int64 time = 1;
    int64 expiration = 2;
    int64 gasLimit = 3;
    int64 gasRatio = 4;
    repeated Action actions = 5;
    repeated string signers = 6;
    repeated sigpb.Signature signs = 7;
    string publisher = 8;
    repeated sigpb.Signature publishSigns = 9;
    int64 delay = 10;
    uint32 chain_id = 11;
    bytes referredTx = 12;
    repeated contract.Amount amountLimit = 13;
    bytes reserved = 14;
}

message Receipt {
    string funcName = 1;
    string content = 2;
}

message Status {
    int32 code = 1;
    string message = 2;
}

message TxReceipt {
    bytes txHash = 1;
    int64 gasUsage = 2;
    map<string, int64> ramUsage = 3;
    Status status = 4;
    repeated string returns = 5;
    repeated Receipt receipts = 6;

}
